# omenix

./: .gitignore  Cargo.toml  LICENSE  NIXOS_SETUP.md  README.md  flake.nix  libtypes.rlib
.github/: copilot-instructions.md
.github/workflows/: publish.yml
crates/omenix/: Cargo.toml
crates/omenix-daemon/: Cargo.toml
crates/omenix-daemon/src/: main.rs
crates/omenix-lib/: Cargo.toml
crates/omenix-lib/src/: client.rs  types.rs
crates/omenix/src/: main.rs  tray.rs
polkit/: com.omenix.fancontrol.policy
scripts/: omenix-fancontrol
src/: auth.rs  client.rs  config.rs  daemon.rs  fans.rs  lib.rs  main.rs  tray.rs  types.rs
