[package]
name = "omenix"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = "0.18.2"
image = { version = "0.25.6", default-features = false, features = ["png"] }
tray-icon = { version = "0.21.1", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
glob = "0.3.2"
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
