[package]
name = "omenix-daemon"
version = "0.0.5"
edition = "2024"

[dependencies]
omenix-lib = { path = "../omenix-lib" }
clap = { version = "4.5.47", features = ["derive"] }
clap_config = "0.1.1"
glob = "0.3.2"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
