[package]
name = "omenix"
version = "0.0.5"
edition = "2024"

[dependencies]
omenix-lib = { path = "../omenix-lib" }
gtk = "0.18.2"
image = { version = "0.25.6", default-features = false, features = ["png"] }
tray-icon = { version = "0.21.1", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
